--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "milligram": "^1.3.0",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "node-sass": "^4.5.2",
+    "perfect-styles": "^1.0.0",
     "react": "^15.5.4",
-    "react-addons-css-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "react-transition-group": "^1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
