--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "font-awesome": "^4.7.0",
+    "axios": "^0.16.1",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "node-sass": "^4.5.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
+    "react-router-page-transition": "^3.0.2",
     "react-transition-group": "^1.1.3"
   },
   "devDependencies": {
