--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
     "react-router-page-transition": "^3.0.2",
-    "react-transition-group": "^1.1.3"
+    "react-transition-group": "^1.1.3",
+    "validator": "^7.0.0"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
