--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.1",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
+    "open-browser-webpack-plugin": "^0.0.5",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
@@ -17,24 +18,16 @@
     "autoprefixer": "6.7.2",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
-    "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-app": "^2.2.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.20.0",
-    "case-sensitive-paths-webpack-plugin": "1.1.4",
-    "chalk": "1.1.3",
-    "connect-history-api-fallback": "1.3.0",
-    "cross-spawn": "4.0.2",
     "css-loader": "0.26.1",
     "cssnano": "^3.10.0",
-    "detect-port": "1.1.0",
-    "dotenv": "2.0.0",
     "eslint": "3.16.1",
     "eslint-config-airbnb": "^15.0.1",
-    "eslint-config-react-app": "^0.6.2",
     "eslint-loader": "1.6.0",
     "eslint-plugin-flowtype": "2.21.0",
     "eslint-plugin-import": "^2.2.0",
@@ -42,26 +35,18 @@
     "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "0.10.0",
-    "fs-extra": "0.30.0",
     "html-webpack-plugin": "2.24.0",
-    "http-proxy-middleware": "0.17.3",
-    "jest": "18.1.0",
-    "json-loader": "0.5.4",
     "mobx-react-devtools": "^4.2.12",
     "node-sass": "^4.5.2",
-    "object-assign": "4.1.1",
     "optimize-css-assets-webpack-plugin": "^1.3.1",
     "postcss-loader": "1.2.2",
-    "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
     "sass-loader": "^6.0.4",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "^2.5.1",
     "webpack-dashboard": "^0.4.0",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.2"
+    "webpack-dev-server": "^2.4.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -70,7 +55,6 @@
     "build": "rm -rf ./build && NODE_ENV=\"production\" webpack",
     "lint-break-on-errors": "eslint ./source/js ./webpack.config.js -f table --ext .js --ext .jsx",
     "lint": "eslint ./source/js ./webpack.config.js -f table --ext .js --ext .jsx || true",
-    "preview": "rm -rf ./build && NODE_ENV=\"production\" webpack-dashboard -t 'Preview Mode - React-Redux Boilerplate' -- webpack-dev-server",
     "hook-add": "prepush install",
     "hook-remove": "prepush remove"
   }
