--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# we are using Sass so we don't need these
-# src/**/*.css
+# Don't need the webstorm stuff
+/.idea
