--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "html-webpack-plugin": "2.28.0",
     "inquirer": "3.0.6",
     "jest": "20.0.3",
+    "mobx-react-devtools": "^4.2.13",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
