--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-app": "^3.0.0",
     "babel-runtime": "6.23.0",
@@ -93,7 +94,8 @@
       "react-app"
     ],
     "plugins": [
-      "transform-decorators-legacy"
+      "transform-decorators-legacy",
+      "lodash"
     ]
   },
   "eslintConfig": {
