--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "fixed-data-table-2": "^0.7.17",
     "lodash": "^4.17.4",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
@@ -39,7 +40,6 @@
     "eslint-plugin-react": "7.0.1",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
-    "flow-bin": "^0.47.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.28.0",
     "inquirer": "3.0.6",
