--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "promise": "7.1.1",
     "react-dev-utils": "^1.0.1",
     "react-error-overlay": "^1.0.1",
+    "react-hot-loader": "next",
     "sass-loader": "^6.0.5",
     "style-loader": "0.17.0",
     "sw-precache-webpack-plugin": "0.9.1",
@@ -96,6 +97,7 @@
       "react-app"
     ],
     "plugins": [
+      "react-hot-loader/babel",
       "transform-decorators-legacy",
       "lodash"
     ]
