--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
-    "fixed-data-table-2": "^0.7.17",
     "lodash": "^4.17.4",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-icons": "^2.2.5",
     "react-router-dom": "^4.1.1",
+    "react-table": "^6.0.5",
     "react-transition-group": "^1.1.3",
     "validator": "^7.0.0"
   },
