--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "react": "^15.5.4",
+    "react-datepicker": "^0.46.0",
     "react-dom": "^15.5.4",
     "react-icons": "^2.2.5",
     "react-router-dom": "^4.1.1",
@@ -61,6 +62,7 @@
     "webpack": "2.5.1",
     "webpack-dev-server": "2.4.5",
     "webpack-manifest-plugin": "1.1.0",
+    "webpack-visualizer-plugin": "^0.1.11",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
