--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "Take the City",
+  "short_name": "TTC Give!",
   "name": "Give - Take the City",
+  "description": "A giving app for Take the City",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
@@ -14,7 +15,7 @@
     }
   ],
   "start_url": "./index.html",
-  "display": "standalone",
+  "display": "fullscreen",
   "theme_color": "#8F0900",
   "background_color": "#ffffff"
 }
