--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^15.5.4",
     "react-datepicker": "^0.46.0",
     "react-dom": "^15.5.4",
+    "react-ga": "^2.2.0",
     "react-icons": "^2.2.5",
     "react-router-dom": "^4.1.1",
     "react-table": "^6.0.5",
@@ -43,6 +44,8 @@
     "eslint-plugin-react": "7.0.1",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
+    "flow-bin": "^0.47.0",
+    "flow-typed": "^2.1.2",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.28.0",
     "inquirer": "3.0.6",
