--- a/package.json
+++ b/package.json
@@ -8,16 +8,13 @@
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "moment": "^2.18.1",
-    "node-sass": "^4.5.3",
     "react": "^15.5.4",
     "react-datepicker": "^0.46.0",
     "react-dom": "^15.5.4",
     "react-ga": "^2.2.0",
-    "react-icons": "^2.2.5",
     "react-router-dom": "^4.1.1",
     "react-table": "^6.0.5",
-    "react-transition-group": "^1.1.3",
-    "validator": "^7.0.0"
+    "react-transition-group": "^1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
@@ -27,6 +24,7 @@
     "babel-loader": "7.0.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "node-sass": "^4.5.3",
     "babel-preset-react-app": "^3.0.0",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.0.0",
