--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "moment": "^2.18.1",
+    "raven-js": "^3.17.0",
     "react": "^15.5.4",
     "react-datepicker": "^0.46.0",
     "react-dom": "^15.5.4",
@@ -24,7 +25,6 @@
     "babel-loader": "7.0.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "node-sass": "^4.5.3",
     "babel-preset-react-app": "^3.0.0",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.0.0",
@@ -49,6 +49,7 @@
     "inquirer": "3.0.6",
     "jest": "20.0.3",
     "mobx-react-devtools": "^4.2.13",
+    "node-sass": "^4.5.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
